working on other socks in firebase